deployment/manifest/deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lifesub-web
  namespace: dg0417-lifesub-ns
  labels:
    app: lifesub-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lifesub-web
  template:
    metadata:
      labels:
        app: lifesub-web
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: lifesub-web
        image: dg0417cr.azurecr.io/dg0417/lifesub-web:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 18080
        resources:
          requests:
            cpu: 256m
            memory: 256Mi
          limits:
            cpu: 1024m
            memory: 1024Mi
        volumeMounts:
        - name: runtime-config
          mountPath: /usr/share/nginx/html/runtime-env.js
          subPath: runtime-env.js
      volumes:
      - name: runtime-config
        configMap:
          name: lifesub-web-config

---


apiVersion: v1
kind: Service
metadata:
  name: lifesub-web
  namespace: dg0417-lifesub-ns
  labels:
    app: lifesub-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 18080
    protocol: TCP
  selector:
    app: lifesub-web


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lifesub-web-ingress
  namespace: dg0417-lifesub-ns
  labels:
    app: lifesub-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  rules:
  - host: dg0417-lifesub.20.249.134.59.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lifesub-web
            port:
              number: 80
